--- a/package/CHANGELOG
+++ b/package/CHANGELOG
@@ -15,11 +15,12 @@ The rules for this file:
 ------------------------------------------------------------------------------
 mm/dd/yy
 
-  * 0.16.2
+  * 0.16.2 rathann, richardjgowers
 
 Enhancements
 
 Fixes
+  * Fixed dtype of numpy arrays to accomodate 32 bit archetectures (Issue #1362)
 
 Changes
 
